# minesweeper

./: Cargo.toml  README.md  board_options.ron
board_plugin/: Cargo.toml
board_plugin/src/: events.rs  lib.rs
board_plugin/src/components/: bomb_neighbor.rs  coordinates.rs  uncover.rs
board_plugin/src/resources/: board.rs  mod.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
board_plugin_v2/: Cargo.toml
board_plugin_v2/src/: events.rs  lib.rs  traits.rs
board_plugin_v2/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  countdown_timer.rs  end_message.rs  flag.rs  grid.rs  mod.rs  neighbors.rs  tile_cover.rs
board_plugin_v2/src/resources/: board.rs  board_observers.rs  mod.rs
board_plugin_v2/src/systems/: end.rs  input.rs  lose.rs  mark.rs  mod.rs  uncover.rs  win.rs
main_menu_plugin/: Cargo.toml
main_menu_plugin/src/: components.rs  lib.rs
settings_plugin/: Cargo.toml
settings_plugin/src/: components.rs  events.rs  input_value.rs  lib.rs
settings_plugin/src/resources/: board_assets.rs  board_options.rs  mod.rs
settings_plugin/src/ui/: bombs_row.rs  map_size_row.rs  mod.rs  position_row.rs  root.rs  safe_start_row.rs  tile_padding_row.rs  tile_size_row.rs
settings_plugin/src/ui/common/: button.rs  field.rs  label.rs  mod.rs  select_button.rs  text.rs  text_input.rs
src/: events.rs  main.rs
