[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2024"

[features]
default = []
board_v1 = ["board_plugin"]
board_v2 = ["board_plugin_v2"]
debug = ["board_plugin/debug", "board_plugin_v2/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "=0.17.0-rc.2"
board_plugin = { path = "board_plugin", optional = true }
board_plugin_v2 = { path = "board_plugin_v2", optional = true }

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.33.1", optional = true }

[workspace]
members = [
    "board_plugin",
    "board_plugin_v2"
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1