[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2024"

[features]
default = ["board_v2"]
board_v1 = ["board_plugin"]
board_v2 = ["board_plugin_v2"]
debug = [
    "board_plugin/debug", 
    "board_plugin_v2/debug", 
    "main_menu_plugin/debug", 
    "settings_plugin/debug", 
    "bevy-inspector-egui"
]
simple_neighbors = ["board_plugin_v2/simple_neighbors"]
hierarchical_neighbors = ["board_plugin_v2/hierarchical_neighbors"]

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking", "experimental_bevy_ui_widgets"] }
board_plugin = { path = "board_plugin", optional = true }
board_plugin_v2 = { path = "board_plugin_v2", optional = true }
main_menu_plugin = { path = "main_menu_plugin"}
settings_plugin = { path = "settings_plugin"}

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.34.0", optional = true }

[workspace]
resolver = "2"
members = [
    "board_plugin",
    "board_plugin_v2",
    "main_menu_plugin",
    "settings_plugin"
]

[workspace.dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking", "experimental_bevy_ui_widgets"] }

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1