[package]
name = "board_plugin_v2"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]
simple_neighbors = []
hierarchical_neighbors = []

[dependencies]
settings_plugin = { path = "../settings_plugin"}
# Engine
bevy = { workspace = true }

# Random
rand = "0.9.2"

# Console Debug
colored = { version = "3.0.0", optional = true }
# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.34.0", optional = true }
