[package]
name = "settings_plugin"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Engine
bevy = "0.17.0"

# Serialization
serde = "1.0.228"
ron = "0.11.0"

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.33.1", optional = true }