[package]
name = "settings_plugin"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Engine
bevy = { workspace = true }

# Serialization
serde = "1.0.228"
ron = "0.12.0"

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.36.0", optional = true }